17 July 2018: Wouter
	- Fix #4127 unbound -h does not list -p help.
	- Print error if SSL name verification configured but not available
	  in the ssl library.
	- Fix that ratelimit and ip-ratelimit are applied after reload of
	  changed config file.
	- Resize ratelimit and ip-ratelimit caches if changed on reload.

16 July 2018: Wouter
	- Fix qname minimisation NXDOMAIN validation lookup failures causing
	  error_supers assertion fails.
	- Squelch can't bind socket errors with Permission denied unless
	  verbosity is 4 or higher, for UDP outgoing sockets.

12 July 2018: Wouter
	- Fix to improve systemd socket activation code file descriptor
	  assignment.
	- Fix for 4126 that the #define for UNKNOWN_SERVER_NICENESS can be more
	  easily changed to adjust default rtt assumptions.

10 July 2018: Wouter
	- Note in documentation that the cert name match code needs
	  OpenSSL 1.1.0 or later to be enabled.

6 July 2018: Wouter
	- Fix documentation ambiguity for tls-win-cert in tls-upstream and
	  forward-tls-upstream docs.
	- iana port update.
	- Note RFC8162 support.  SMIMEA record type can be read in by the
	  zone record parser.
	- Fix round robin for failed addresses with prefer-ip6: yes

4 July 2018: Wouter
	- Fix #4112: Fix that unbound-anchor -f /etc/resolv.conf will not pass
	  if DNSSEC is not enabled.  New option -R allows fallback from
	  resolv.conf to direct queries.

3 July 2018: Wouter
	- Better documentation for unblock-lan-zones and insecure-lan-zones
	  config statements.
	- Fix permission denied printed for auth zone probe random port nrs.

2 July 2018: Wouter
	- Fix checking for libhiredis printout in configure output.
	- Fix typo on man page in ip-address description.
	- Update libunbound/python/examples/dnssec_test.py example code to
	  also set the 20326 trust anchor for the root in the example code.

29 June 2018: Wouter
	- dns64-ignore-aaaa: config option to list domain names for which the